# kit

./: .gitignore  Cargo.toml  README.md  build.rs
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_and_test.yml  mdbook.yml
scripts/: build-release.py
src/: lib.rs  main.rs
src/boot_fake_node/: mod.rs
src/boot_real_node/: mod.rs
src/build_start_package/: mod.rs
src/chain/: kinostate.json  mod.rs  register.rs
src/chain/abi/: DotDevRegistrar.json  KnsRegistryResolver.json
src/chain/kinostate/: c3069a5.json
src/connect/: mod.rs
src/dev_ui/: mod.rs
src/inject_message/: mod.rs
src/new/: componentize.mjs  mod.rs
src/new/templates/: .gitignore  Cargo.toml  tests.toml
src/new/templates/javascript/no-ui/chat/api/: chat:template.os-v0.wit  {package_name}:{publisher}-v0.wit
src/new/templates/javascript/no-ui/chat/chat/: package.json
src/new/templates/javascript/no-ui/chat/pkg/: manifest.json
src/new/templates/javascript/no-ui/chat/send/: Cargo.toml  Cargo.toml_
src/new/templates/javascript/no-ui/chat/test/: tests.toml
src/new/templates/javascript/no-ui/echo/: metadata.json
src/new/templates/javascript/no-ui/echo/echo/: package.json
src/new/templates/javascript/no-ui/echo/pkg/: manifest.json
src/new/templates/javascript/no-ui/echo/test/: tests.toml
src/new/templates/javascript/no-ui/fibonacci/: .gitignore  metadata.json
src/new/templates/javascript/no-ui/fibonacci/fibonacci/: package.json
src/new/templates/javascript/no-ui/fibonacci/pkg/: manifest.json
src/new/templates/javascript/no-ui/fibonacci/test/: tests.toml
src/new/templates/javascript/no-ui/fibonacci/{package_name}/: package.json
src/new/templates/pkg/: manifest.json
src/new/templates/python/chat/: .gitignore
src/new/templates/python/chat/{package_name}/src/: lib.py
src/new/templates/python/no-ui/chat/: metadata.json
src/new/templates/python/no-ui/chat/api/: {package_name}:{publisher}-api-v0.wit  {package_name}:{publisher}-v0.wit
src/new/templates/python/no-ui/chat/pkg/: manifest.json  scripts.json
src/new/templates/python/no-ui/chat/test/: tests.toml
src/new/templates/python/no-ui/echo/: metadata.json
src/new/templates/python/no-ui/echo/pkg/: manifest.json
src/new/templates/python/no-ui/fibonacci/: metadata.json
src/new/templates/python/no-ui/fibonacci/pkg/: manifest.json
src/new/templates/python/no-ui/fibonacci/test/: tests.toml
src/new/templates/rust/chat/: Cargo.toml
src/new/templates/rust/chat/chat/: Cargo.toml
src/new/templates/rust/chat/chat/src/: lib.rs
src/new/templates/rust/chat/pkg/: metadata.json
src/new/templates/rust/chat/src/: lib.rs
src/new/templates/rust/chat/ui/: index.html  package-lock.json  package.json  vite.config.ts
src/new/templates/rust/chat/ui/src/: App.tsx
src/new/templates/rust/chat/{package_name}/src/: lib.rs
src/new/templates/rust/no-ui/blank/: Cargo.toml  Cargo.toml_  metadata.json
src/new/templates/rust/no-ui/blank/blank/: Cargo.toml
src/new/templates/rust/no-ui/blank/blank/src/: lib.rs
src/new/templates/rust/no-ui/blank/pkg/: manifest.json
src/new/templates/rust/no-ui/blank/{package_name}/: Cargo.toml_
src/new/templates/rust/no-ui/chat/: Cargo.toml  Cargo.toml_
src/new/templates/rust/no-ui/chat/api/: chat:template.os-v0.wit  {package_name}:{publisher}-api-v0.wit
src/new/templates/rust/no-ui/chat/chat/: Cargo.toml
src/new/templates/rust/no-ui/chat/pkg/: manifest.json  scripts.json
src/new/templates/rust/no-ui/chat/send/: Cargo.toml  Cargo.toml_
src/new/templates/rust/no-ui/chat/test/: tests.toml
src/new/templates/rust/no-ui/chat/{package_name}/: Cargo.toml  Cargo.toml_
src/new/templates/rust/no-ui/echo/: Cargo.toml  metadata.json
src/new/templates/rust/no-ui/echo/echo/: Cargo.toml
src/new/templates/rust/no-ui/echo/pkg/: manifest.json
src/new/templates/rust/no-ui/echo/test/: tests.toml
src/new/templates/rust/no-ui/echo/{package_name}/: Cargo.toml  Cargo.toml_
src/new/templates/rust/no-ui/fibonacci/: Cargo.toml  Cargo.toml_  metadata.json
src/new/templates/rust/no-ui/file_transfer/: Cargo.toml_  metadata.json
src/new/templates/rust/ui/chat/: .gitignore  Cargo.toml  metadata.json
src/new/templates/rust/ui/chat/chat/: Cargo.toml
src/new/templates/rust/ui/chat/chat/src/: lib.rs
src/new/templates/rust/ui/chat/{package_name}/: Cargo.toml
src/new/templates/rust/ui/chat/{package_name}/src/: lib.rs
src/new/templates/rust/ui/file_transfer/: .gitignore
src/new/templates/src/: lib.rs
src/new/templates/test/chat/: tests.toml
src/new/templates/test/chat/{package_name}_test/: metadata.json
src/new/templates/test/echo/: tests.toml
src/new/templates/test/echo/{package_name}_test/: Cargo.toml_  metadata.json
src/new/templates/test/fibonacci/: tests.toml
src/new/templates/ui/chat/: README.md  package-lock.json
src/new/templates/ui/chat/ui/: README.md  package-lock.json  package.json  vite.config.ts
src/new/templates/ui/file_transfer/ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/publish/: mod.rs
src/remove_package/: mod.rs
src/reset_cache/: mod.rs
src/run_tests/: cleanup.rs  mod.rs  network_router.rs  tester_types.rs  types.rs
src/run_tests/wit/: kinode.wit
src/setup/: mod.rs
src/start_package/: mod.rs
src/update/: mod.rs
src/view_api/: mod.rs
(+155 files in other folders)
