[package]
name = "kit"
version = "0.5.2"
edition = "2021"

[build-dependencies]
anyhow = "1.0"
git2 = "0.18"

[dependencies]
base64 = "0.21"
clap = { version = "4.4", features = ["cargo", "string"] }
color-eyre = { version = "0.6", features = ["capture-spantrace"] }
dirs = "5.0"
fs-err = "2.11"
futures-util = "0.3"
hex = "0.4"
kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib.git", rev = "84b3d84" }
nix = { version = "0.27", features = ["process", "signal", "term"] }
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
rmp-serde = "1.1.2"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
thiserror = "1.0"
tokio = { version = "1.28", features = [
    "fs",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tokio-tungstenite = "*"
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "std"] }
walkdir = "2.4"
zip = "0.6"

[[bin]]
name = "kit"
path = "src/main.rs"

[lib]
