[package]
name = "kit"
version = "0.8.3"
edition = "2021"

[build-dependencies]
anyhow = "1.0"
git2 = "0.18"

[dependencies]
alloy = { version = "0.1.3", features = [
    "consensus",
    "contract",
    "json-rpc",
    "network",
    "provider-ws",
    "providers",
    "pubsub",
    "rpc",
    "rpc-client",
    "rpc-client-ws",
    "rpc-types",
    "rpc-types-eth",
    "signers",
    "signer-keystore",
    "signer-ledger",
    "signer-local",
    "signer-trezor",
] }
alloy-sol-macro = "0.7.6"
alloy-sol-types = "0.7.6"
base64 = "0.21"
cargo_metadata = "0.18"
chrono = "0.4"
clap = { version = "4.4", features = ["cargo", "string"] }
color-eyre = { version = "0.6", features = ["capture-spantrace"] }
dirs = "5.0"
fs-err = "2.11"
hex = "0.4"
kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib.git", rev = "9ac9e51" }
nix = { version = "0.27", features = ["process", "signal", "term"] }
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
rpassword = "7"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
tokio = { version = "1.28", features = [
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "std"] }
walkdir = "2.4"
wit-bindgen = "0.24.0"
zip = "0.6"

[workspace]
members = []
exclude = ["src/new/templates/*"]
resolver = "2"

[[bin]]
name = "kit"
path = "src/main.rs"

[lib]
