[package]
name = "blank"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib", rev = "75d3f10" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.36.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
